--- a/public/products.html
+++ b/public/products.html
@@ -12,11 +12,20 @@
 </head>
 
 <body>
+    <script src="main.js"></script>
+    <header class="navbar">
+        <div class="logo">Victor's Garage</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Catalogue</a>
+            <a href="about.html">About</a>
+            <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
+        </nav>
+    </header>
 
     <div class="container">
-
         <div class="header">
-            <h1>Catalogue</h1>
+            <h1>  Catalogue</h1>
         </div>
         <div class="grid">
             <div class="product">
@@ -24,28 +33,59 @@
                     alt="2022-Mclaren-720S-Performance-Supernova-Silver">
                 <h2>2022 Mclaren 720S</h2>
                 <p>$300,000</p>
-                <a href='details2022Mclaren720S.html'>View Details</a>
+                <a href='details/details2022Mclaren720S.html'>View Details</a>
             </div>
             <div class="product">
                 <img src="sources/1990-Toyota-Supra-Gray.avif" alt="1990-Toyota-Supra-Gray">
                 <h2>1990 Toyota Supra</h2>
                 <p>$25,000</p>
-                <a href='#'>View Details (soon)</a>
+                <a href='details/details1990supra.html'>View Details</a>
             </div>
             <div class="product">
-                <img src="sources/1957ChevroletBelAir2DoorSedan.avif" alt="21957ChevroletBelAir2DoorSedan">
+                <img src="sources/1957ChevroletBelAir2DoorSedan.avif" alt="1957 Chevrolet BelAir">
                 <h2>1957 Chevrolet BelAir</h2>
                 <p>$35,000</p>
-                <a href='#'>View Details (soon)</a>
+                <a href='details/details1957belair.html'>View Details</a>
             </div>
             <div class="product">
                 <img src="sources/1969-Chevrolet-Camaro-Candyapple-Red-124379N649972_001.avif"
-                    alt="1969-Chevrolet-Camaro-Candyapple-Red">
+                    alt="1969 Chevrolet Camaro">
                 <h2>1969 Chevrolet Camaro</h2>
                 <p>$65,000</p>
-                <a href='#'>View Details (soon)</a>
+                <a href='details/details1969camaro.html'>View Details</a>
+            </div>
+            <div class="product">
+                <img src="sources/2001-Ferrari-360-Spider-Yellow.avif"
+                    alt="2001 Ferrari 360 Spider">
+                <h2>2001 Ferrari 360 Spider</h2>
+                <p>$78,000</p>
+                <a href='details/details2001ferrarispider.html'>View Details</a>
+            </div>
+            <div class="product">
+                <img src="sources/1934-Chevrolet-3-Window-Coupe-Blue.avif"
+                    alt="1934 Chevrolet 3 Window Coupe">
+                <h2>1934 Chevrolet 3 Window Coupe</h2>
+                <p>$49,999</p>
+                <a href='details/details1934chevrolet3window.html'>View Details</a>
+            </div>
+            <div class="product">
+                <img src="sources/1978-Jeep-CJ-7-Orange.avif" alt="1978 Jeep CJ-7 Orange">
+                <h2>1978 Jeep CJ-7</h2>
+                <p>$29,995</p>
+                <a href='details/details1978jeepcj.html'>View Details</a>
+            </div>
+            <div class="product">
+                <img src="sources/1995-Nissan-Skyline-GT-R-R33-White.avif" alt="1995 Nissan Skyline GT-R R33">
+                <h2>1995 Nissan Skyline GT-R R33</h2>
+                <p>$74,975</p>
+                <a href='details/details1995skyline.html'>View Details</a>
             </div>
         </div>
+    </div>
+
+    <footer>
+        <p>⚡ Engineered for Enthusiasts | © 2025 Victor's Garage</p>
+    </footer>
 </body>
 
 </html>
