--- a/public/adminupload.html
+++ b/public/adminupload.html
@@ -1,26 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Upload</title>
-  <link rel="stylesheet" href="admin.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin - Bulk Upload</title>
+    <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-  <header>
-    <h1>Admin Panel</h1>
-    <nav>
-      <a href="adminupload.html">Bulk Upload</a>
-      <a href="adminproducts.html">Products</a>
-      <a href="#">Sign Out</a>
-    </nav>
-  </header>
-  <main>
-    <h2>Upload Product Data</h2>
-    <form>
-      <input type="file" accept=".json,.csv,.txt">
-      <button type="submit">Upload</button>
-    </form>
-    <p>Accepted formats: JSON, CSV, TXT</p>
-    <pre>{ "id": 1, "name": "Item", "price": 10.00 }</pre>
-  </main>
+    <header>
+        <h1>Admin Dashboard</h1>
+        <nav>
+            <a href="adminupload.html">Bulk Upload</a>
+            <a href="adminproducts.html">Product List</a>
+            <a href="#">Sign Out</a>
+        </nav>
+    </header>
+
+    <section class="upload">
+        <h2>Upload Product Data</h2>
+        <p>Upload JSON, CSV, or TXT files following this format:</p>
+        <pre>
+        [
+            {"name": "Item 1", "category": "Decor", "price": 10, "image": "item1.jpg"},
+            {"name": "Item 2", "category": "Kitchen", "price": 15, "image": "item2.jpg"}
+        ]
+        </pre>
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+            <input type="file" name="bulkFile" accept=".json, .csv, .txt">
+            <button type="submit">Upload</button>
+        </form>
+    </section>
 </body>
 </html>
