--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
-
+    <title>Victor's Garage</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <div class="container">
-
-        <div class="header">
-            <h2><a href="products.html">Catalogue</a></h2>
-            <h1>Victor's Garage</h1>
-            <h3><a href="#">Gallery</a></h3>
-        </div>
-
-        <div class="search">
-
-        </div>
-
+    <script src="main.js"></script>
+    <header class="navbar">
+        <div class="logo">Victor's Garage</div>
         <nav>
-            <p>Featured Cars</p>
+            <a href="products.html">Catalogue</a>
+            <a href="about.html">About</a>
+            <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
         </nav>
+    </header>
 
+    <section class="hero">
+        <div class="hero-overlay">
+            <h1>Your Ride, Our Passion</h1>
+            <p>Exclusive custom cars, engineered for passion.</p>
+            <a href="products.html" class="cta-button">Explore Our Collection</a>
+        </div>
+    </section>
 
-        <main>
-            <figure>
-                <p>
-                    <img src='sources/1957ChevroletBelAir2DoorSedan.avif' alt="1957ChevroletBelAir2DoorSedan">
-                </p>
-            </figure>
+    <section class="featured">
+        <h2>Featured Cars</h2>
+        <div class="featured-grid">
+            <a href="details/details1957belair.html" class="featured-card">
+                <img src="sources/1957ChevroletBelAir2DoorSedan.avif" alt="1957 Chevrolet Bel Air">
+                <h3>1957 Chevrolet Bel Air</h3>
+            </a>
+        
+            <a href="details/details1990supra.html" class="featured-card">
+                <img src="sources/1990-Toyota-Supra-Gray.avif" alt="1990 Toyota Supra">
+                <h3>1990 Toyota Supra</h3>
+            </a>
+        
+            <a href="details/details2022Mclaren720s.html" class="featured-card">
+                <img src="sources/2022-Mclaren-720S-Performance-Supernova-Silver.avif" alt="2022 McLaren 720S">
+                <h3>2022 McLaren 720S</h3>
+            </a>
+        </div>        
+    </section>
 
-
-            <figure>
-                <p>
-                    <img src="sources/1990-Toyota-Supra-Gray.avif" alt="1990-Toyota-Supra-Gray">
-                </p>
-            </figure>
-
-            <figure>
-                <p>
-                    <img src="sources/2022-Mclaren-720S-Performance-Supernova-Silver.avif"
-                        alt="2022-Mclaren-720S-Performance-Supernova-Silver">
-                </p>
-            </figure>
-
-        </main>
-        <nav>
-            <p>Who we are:</p>
-        </nav>
-        <section>
-            <p>Victor's Garage is a group of highly skilled and experienced group of mechanics set on giving you the
-                best place to search and buy custom made cars from people like us.
-                We value...
-            </p>
-        </section>
-
-    </div>
-
+    <footer>
+        <p>⚡ Engineered for Enthusiasts | © 2025 Victor's Garage</p>
+    </footer>
 </body>
-
 </html>
